--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "d3-scale",
-  "version": "4.0.1",
+  "name": "d3-scale-rn",
+  "version": "4.0.2",
   "description": "Encodings that map abstract data to visual representation.",
   "homepage": "https://d3js.org/d3-scale/",
   "repository": {
@@ -25,12 +25,12 @@
   ],
   "module": "src/index.js",
   "main": "src/index.js",
-  "jsdelivr": "dist/d3-scale.min.js",
-  "unpkg": "dist/d3-scale.min.js",
+  "jsdelivr": "dist/d3-scale-rn.min.js",
+  "unpkg": "dist/d3-scale-rn.min.js",
   "exports": {
     "./package.json": "./package.json",
     ".": {
-      "umd": "./dist/d3-scale.min.js",
+      "umd": "./dist/d3-scale-rn.min.js",
       "default": "./src/index.js"
     }
   },
